--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=ecoswap
 server.port=9000
 
-spring.datasource.url=jdbc:mysql://localhost:3306/ecoswap?useSSL=false&serverTimezone=UTC
-spring.datasource.username=myuser
-spring.datasource.password=secret
+spring.datasource.url=jdbc:mysql://localhost:3306/ecoswap
+spring.datasource.username=root
+spring.datasource.password=verysecret
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
@@ -26,8 +26,8 @@ logging.level.org.thymeleaf=DEBUG
 # For Gmail: Enable "App Passwords" in your Google Account settings
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=your-email@gmail.com
-spring.mail.password=your-app-password
+spring.mail.username=ecoswapcustomerservice@gmail.com
+spring.mail.password=xohcwhtlvqqmivjz
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
@@ -36,8 +36,8 @@ spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
 
 # Email Sender Details
-app.email.from=your-email@gmail.com
-app.email.from-name=EcoSwap
+app.email.from=ecoswapcustomerservice@gmail.com
+app.email.from-name=ecoswap
 
 # Alternative SMTP Providers (commented out):
 #
@@ -52,3 +52,6 @@ app.email.from-name=EcoSwap
 # For Custom SMTP (like Mailtrap for testing):
 # spring.mail.host=smtp.mailtrap.io
 # spring.mail.port=2525
+
+spring.docker.compose.enabled=false
+
