--- a/compose.yaml
+++ b/compose.yaml
@@ -2,9 +2,8 @@ services:
   mysql:
     image: 'mysql:latest'
     environment:
-      - 'MYSQL_DATABASE=mydatabase'
-      - 'MYSQL_PASSWORD=secret'
+      - 'MYSQL_DATABASE=ecoswap'
       - 'MYSQL_ROOT_PASSWORD=verysecret'
-      - 'MYSQL_USER=myuser'
+      - 'MYSQL_ALLOW_EMPTY_PASSWORD=yes'
     ports:
-      - '3306'
+      - '3306:3306'
